# av_component

./: .clang-format  .gitignore  CMakeLists.txt  README.md  xmake.lua
base/: CMakeLists.txt  aligned_malloc.cpp  aligned_malloc.hpp  location.cpp  location.hpp  ref_counted_object.hpp  scoped_refptr.hpp
cmake/: custom_fetch.cmake  testing.cmake
src/: CMakeLists.txt
src/base/: CMakeLists.txt  aligned_malloc.cpp  aligned_malloc.hpp  location.cpp  location.hpp  make_ref_counted.hpp  nocopyable.hpp  queued_task.hpp  ref_count.hpp  ref_counted_object.hpp  scoped_refptr.hpp  thread.cpp  thread.hpp
src/base/error/: error.hpp  rtc_error.cpp  rtc_error.hpp  rtc_error_test.cpp
src/base/error/test/: rtc_error_test.cpp
src/base/executor/: executor.hpp  manual_executor.cpp  manual_executor.hpp  schduled_executor.hpp
src/base/executor/test/: executor_test.cpp
src/base/pipeline/: pipeline.hpp
src/base/task_queue/: queued_task.hpp  task_queue_base.cpp  task_queue_base.hpp
src/base/test/: main.cpp
src/video/: CMakeLists.txt  i420_buffer.cpp  i420_buffer.hpp  video_frame.hpp  video_frame_buffer.cpp  video_frame_buffer.hpp  video_rotation.hpp  video_sink_interface.hpp  video_source_interface.hpp
video/: CMakeLists.txt  i420_buffer.cpp  i420_buffer.hpp  video_frame.hpp  video_frame_buffer.cpp  video_frame_buffer.hpp  video_source_interface.hpp
